--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
 theme: jekyll-theme-cayman
+
+title: Towards a Machine Learning-based framework for Academic Paper Pre-evaluation
+description: CS 7641 Group 4 Project Proposal
